--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
  
-     <title>Pop-up Page - Step 1</title>
+     <title>Refer A Friend</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -60,14 +60,7 @@
         <h2> Please select your referral’s selection </h2>
         <h3>Language:</h3>
         <select id="language-select">
-            <option value="korean">Korean</option>
-            <option value="japanese">Japanese</option>
-            <option value="english">English</option>
-             <option value="thai">Thai</option>
-            <option value="Indonesian">Bahasa Indonesian</option>
-            <option value="mandarin">Mandarin</option>
-            <option value="Tagalog">Tagalog</option>
-
+ 
             
         </select>
 
