--- a/index.html
+++ b/index.html
@@ -74,12 +74,22 @@
             <!-- Options will be populated dynamically based on the selected language and location -->
         </select>
     
+  
         <div>
             <h3 id="job-title-display"></h3>
             <a id="job-link-display" href="#" target="_blank"></a>
         </div>
         <button onclick="nextStep()">Next</button>
+        <h2> Follow Us On:</h2> 
+
+        <div class="social-buttons">
+            
+             <a href="https://www.facebook.com" target="_blank" class="social-btn fb-btn"> </a>
+            <a href="https://www.instagram.com" target="_blank" class="social-btn ig-btn"> </a>
+            <a href="https://www.youtube.com" target="_blank" class="social-btn yt-btn"> </a>
+        </div>
     </div>
+
     <div class="spacer"></div>
 <div class="spacer"></div>
 <div class="spacer"></div>
