--- a/HowtoVid.html
+++ b/HowtoVid.html
@@ -20,13 +20,10 @@
   
         <div id="content">
             <h2>How To Refer a Friend</h2>
-
-            <button class="go-back-btn" onclick="goBack()">
-                <i class=" "> </i> Back
-            </button>
+            <button onclick="goBack()">Go Back</button>
             <div class="video-container">
                 <video width="560" height="315" controls>
-                    <source src="RAFEVER.mp4" type="video/mp4">
+                    <source src="RAF Guide.mp4" type="video/mp4">
                     Your browser does not support the video tag.
                 </video>
         </div>
