--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <img src="TPLogo11.png" alt="Additional Logo">
             </div>
             <div id="how-to">
-                <a href="HowtoVid.html" target="_blank">
+                <a href="HowtoVid.html">
                     <button1 class="how-to-button1">How To</button1>
                 </a>
             </div>
