--- a/index.html
+++ b/index.html
@@ -82,11 +82,12 @@
         <button onclick="nextStep()">Next</button>
         <h2> Follow Us On:</h2> 
 
+
         <div class="social-buttons">
             
-             <a href="https://www.facebook.com" target="_blank" class="social-btn fb-btn"> </a>
-            <a href="https://www.instagram.com" target="_blank" class="social-btn ig-btn"> </a>
-            <a href="https://www.youtube.com" target="_blank" class="social-btn yt-btn"> </a>
+             <a href="https://www.facebook.com/teleperformance.malaysia/" target="_blank" class="social-btn fb-btn"> </a>
+            <a href="https://www.instagram.com/teleperformance_malaysia/" target="_blank" class="social-btn ig-btn"> </a>
+            <a href="https://www.youtube.com/@TeleperformanceGroup" target="_blank" class="social-btn yt-btn"> </a>
         </div>
     </div>
 
