--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
         </div>
         <button id="scan-code-button" onclick="generateQrCode()">or have your friend scanning this code above!</button>
         <p id="thank-you">Thank you for your referral!</p>
-        <p id="referral-message">As we grow into Malaysia, become #MoreTogether as we #ElevateAsia, here are the links your friend can use so this is tagged to your profile into our Recruiting System.</p>
+        <p id="referral-message">As we grow in Malaysia and Thailand, become #MoreTogether as we #ElevateAsia, here are the links your friend can use so this is tagged to your profile into our Recruiting System.</p>
         <h2 id="vr-message">They can visit our locations in VR so they learn of us:</h2>
         
         <div id="picture-container">
