--- a/HowtoVid.html
+++ b/HowtoVid.html
@@ -8,25 +8,36 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 </head>
 <body>
-
+    
         <!-- Logo BG -->
-        <div class="logo-container">
+        <div class="logo-container1">
             <img src="TPLogo11.png" alt="Logo">
         </div>
-
-        <div class="additional-logo">
+        <div id="content1">
+        <div class="additional-logo1">
             <img src="TPLogo11.png" alt="Additional Logo">
         </div>
   
-        <div id="content">
+        <div class="spacer"></div>
+<div class="spacer"></div>
+ 
             <h2>How To Refer a Friend</h2>
             <button onclick="goBack()">Go Back</button>
+            <div class="spacer"></div>
+<div class="spacer"></div>
+ 
             <div class="video-container">
                 <video width="560" height="315" controls>
                     <source src="RAF Guide.mp4" type="video/mp4">
+                    <track src="subtitles.vtt" kind="subtitles" srclang="en" label="English">
                     Your browser does not support the video tag.
                 </video>
+                
         </div>
+        <div class="spacer"></div>
+<div class="spacer"></div>
+<div class="spacer"></div>
+ 
     </div>
 
     <script>
