--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
             </button>
         </div>
         <h2>Thank you for your referral!</h2>
-        <p>As we grow into Malaysia, become #MoreTogether as we #ElevateAsia, here are the links your friend can use so this is tagged to your profile into our Recruiting System.</p>
+        <p>As we grow in Malaysia and Thailand, become #MoreTogether as we #ElevateAsia, here are the links your friend can use so this is tagged to your profile into our Recruiting System.</p>
         <div id="generated-link"></div>
         <!-- Add buttons to share link via WhatsApp and Line -->
         <button id="share-button-whatsapp">Share via WhatsApp  </button>
