--- a/HowtoVid.html
+++ b/HowtoVid.html
@@ -30,6 +30,8 @@
                 <video width="560" height="315" controls>
                     <source src="RAF Guide.mp4" type="video/mp4">
                     <track src="subtitles.vtt" kind="subtitles" srclang="en" label="English">
+                    <track src="subtitles.vtt" kind="subtitles" srclang="en" label="Japanese">
+
                     Your browser does not support the video tag.
                 </video>
                 
