--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             </div>
             <div id="how-to">
                 <a href="HowtoVid.html">
-                    <button1 class="how-to-button1">How To</button1>
+                    <button1 id="how-to-button1" class="how-to-button1">How To</button1>
                 </a>
             </div>
             
