--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
     <!-- Logo BG-->
 <div class="logo-container">
+        <img src="TPLogo11.png" alt="Logo">
 </div>
 <div class="spacer"></div>
 <div class="spacer"></div>
